# claude-server-kit

./: README.md
.github/workflows/: test-setup.yml
brain/: ecosystem.config.cjs  pyproject.toml
brain/scripts/: build_index.py  monitor.py  vault-sync.sh
brain/src/brain/: config.py  server.py  whisper_server.py
brain/src/brain/calendar/: db.py  tools.py
brain/src/brain/server_tools/: tools.py
brain/src/brain/vault/: embeddings.py  ingest.py  sync.py  tools.py
docs/: ARCHITECTURE.md  FEATURES.md
docs/images/: social-preview.html
librarian/: CHECKLIST.md  SYSTEM.md  run.sh
scripts/: calendar-sync.py  git-push-all.sh
scripts/reminders/: mark_retro_done.sh  retro-reminder.sh
skills/reflect/: SKILL.md
skills/track/: SKILL.md
templates/: CLAUDE.md  settings.json
templates/memory/: MEMORY.md
vault-template/templates/: audio-note.md  document.md  meeting-note.md  project-card.md
